--- a/app/pages/manager.html
+++ b/app/pages/manager.html
@@ -12,7 +12,7 @@
   function closeLog(){
     console.log("el dios")
     document.cookie = 'jwt=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT'
-    document.location.href = '/home'
+    document.location.href = '/'
   }
 </script>
 </html>
