--- a/app/pages/cart/cart.html
+++ b/app/pages/cart/cart.html
@@ -1442,7 +1442,7 @@ const foodItem= [
 <script>
 function closeLog(){
     document.cookie = 'jwt=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT'
-    document.location.href = '/home'
+    document.location.href = '/'
 }
 function backLog(){
     document.location.href = '/admin'
