--- a/app/pages/admin/admin.html
+++ b/app/pages/admin/admin.html
@@ -807,7 +807,7 @@ Personaliza tu experiencia gastronómica eligiendo entre una tentadora variedad 
   <script>
     function closeLog(){
       document.cookie = 'jwt=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT'
-      document.location.href = '/home'
+      document.location.href = '/'
     }
     function openCart(){
       document.location.href = '/cart'
